RESOLVED FIXED20557
getScreenCTM() returns wrong values
https://bugs.webkit.org/show_bug.cgi?id=20557
Summary getScreenCTM() returns wrong values
Tuom Larsen
Reported 2008-08-28 02:12:59 PDT
For nested SVG, getScreenCTM() returns wrong position values (.e, .f). Please, see the attachment.
Attachments
Attachment (828 bytes, application/xhtml+xml)
2008-08-28 02:13 PDT, Tuom Larsen
no flags
First attempt (33.49 KB, patch)
2008-09-21 07:53 PDT, Rob Buis
darin: review+
Tuom Larsen
Comment 1 2008-08-28 02:13:31 PDT
Created attachment 23050 [details] Attachment
Tuom Larsen
Comment 2 2008-09-09 11:10:54 PDT
I should have been a bit more specific, sorry: The two alerted values should be top and left coordinates of that squate, relative to the browser window.
Rob Buis
Comment 3 2008-09-21 07:53:31 PDT
Created attachment 23626 [details] First attempt The patch fixes the testcase. I hope there are no drawback to using the renderer abs pos and not the parents, I cant see any. Cheers, Rob.
Darin Adler
Comment 4 2008-09-21 13:53:07 PDT
Comment on attachment 23626 [details] First attempt Looks fine. r=me It'd be a lot better if the test case was a text-only test so it could be used cross platform. You should strive to make new tests text-only whenever possible.
Tuom Larsen
Comment 5 2008-09-23 17:58:02 PDT
(In reply to comment #4) > > It'd be a lot better if the test case was a text-only test so it could be used > cross platform. You should strive to make new tests text-only whenever > possible. I'm sorry, I don't quite understand what do you mean by text only? It is just a text..
Nikolas Zimmermann
Comment 6 2008-09-24 12:53:45 PDT
(In reply to comment #5) > (In reply to comment #4) > > > > It'd be a lot better if the test case was a text-only test so it could be used > > cross platform. You should strive to make new tests text-only whenever > > possible. > > I'm sorry, I don't quite understand what do you mean by text only? It is just a > text.. Darin, meant a WebKit specific LayoutTest feature "layoutTestController.dumpAsText()". This way the test just logs the actual text output in the test-expected.txt file, instead of the coordinates of the RenderObjects' in the render tree. Greetings, Niko >
Rob Buis
Comment 7 2008-09-25 04:06:59 PDT
Fixed by r36856.
Note You need to log in before you can comment on or make changes to this bug.