        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=20557
        getScreenCTM() returns wrong values

        Use the absolute position of the svg root when
        determining the screen ctm.

        Test: svg/custom/getscreenctm-in-mixed-content2.xhtml



git-svn-id: svn://svn.chromium.org/blink/trunk@36856 bbb929c8-8fbe-4397-9dbb-9b2b20218538